--- a/new.ipynb
+++ b/new.ipynb
@@ -2,47 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-19T20:07:48.012077900Z",
      "start_time": "2023-11-19T20:07:47.774520300Z"
-    }
+    },
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "a = np.arange(16).reshape(4,4)"
+    "a = np.array([1, 2, 3, 4, 5, 6])\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "32058caa-c133-4173-9a3e-26accbcf4d5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = np.array([[1,2,3,4],[1,2,3,4],[1,2,3,4]])\n",
-    "s[0][-1]"
+    "a = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "723250a6-5fd7-4e0d-b23b-2d90e1d3a1cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[0])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb877a14-8f3f-4ec0-a2c5-fb1359ef3fc8",
+   "id": "11b8d1f7-707f-4ab8-b738-ba865c091af9",
    "metadata": {},
    "outputs": [],
    "source": []
