--- a/new.ipynb
+++ b/new.ipynb
@@ -36,6 +36,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d89bd2a9-cb35-4fa3-a285-3356920cb80b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NumPy massivlarini ishga tushirish usullaridan biri Python roʻyxatlaridan ikki\n",
+    "# yoki undan yuqori oʻlchamli maʼlumotlar uchun ichki roʻyxatlardan foydalanishdir."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "32058caa-c133-4173-9a3e-26accbcf4d5e",
    "metadata": {},
@@ -78,8 +89,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "11b8d1f7-707f-4ab8-b738-ba865c091af9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = np.zeros(2)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8a35d42b-f1d9-48c9-9f20-1fb655b110a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1.])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = np.ones(2)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1b4bfe8f-7074-447e-9bb2-3a4d3479490e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.empty(2) \n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1aa8aae9-29bb-4ad9-bf51-2e2d24a6cf55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = np.arange(4)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db44c14-e5f2-4af5-bec6-e15170645b1c",
    "metadata": {},
    "outputs": [],
    "source": []
