--- a/new.ipynb
+++ b/new.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "11b8d1f7-707f-4ab8-b738-ba865c091af9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "array([0., 0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,6 +179,93 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2db44c14-e5f2-4af5-bec6-e15170645b1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.linspace() Belgilangan oraliqda chiziqli ravishda joylashtirilgan qiymatlar\n",
+    "# bilan massiv yaratish uchun ham foydalanishingiz mumkin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7e4a15f3-bb3c-44f8-aab6-51567e5952a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  2.5,  5. ,  7.5, 10. ])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = np.linspace(0, 10, num=5)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45a0536e-e8cd-4583-b210-70ff194286d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Elementlarni qo'shish, o'chirish va saralash \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "68473dd0-2f2e-4653-8270-e0b594882eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 5, 3, 7, 4, 6, 8])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([2, 1, 5, 3, 7, 4, 6, 8])\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f8b645d5-9d9d-44f3-8024-2bb0e69fe7c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = np.sort(arr)\n",
+    "num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f85dbf7-2ebc-43ac-bff5-b77d277207d1",
    "metadata": {},
    "outputs": [],
    "source": []
