--- a/new.ipynb
+++ b/new.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-19T20:07:48.012077900Z",
-     "start_time": "2023-11-19T20:07:47.774520300Z"
+     "end_time": "2023-11-21T17:17:10.189460200Z",
+     "start_time": "2023-11-21T17:17:09.935637700Z"
     },
     "collapsed": true,
     "jupyter": {
@@ -22,7 +22,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,8 +264,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "7de891c2-f55c-4b2d-8579-ad933c8473dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "f = np.array([1,2,3,4])\n",
+    "a = np.array([5,6,7,8])\n",
+    "f\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "691e600a-02ae-42bc-b5eb-c4a603283626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s=np.concatenate((f, a))\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3f85dbf7-2ebc-43ac-bff5-b77d277207d1",
+   "id": "0dee60ad-5e23-40ea-a453-e7a6227df560",
    "metadata": {},
    "outputs": [],
    "source": []
